change the file name

--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "First MERN Project",
   "type": "module",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon index.js"
   },
   "author": "biswo",
   "license": "ISC",
